--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -16,6 +16,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
-  }
+    },
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
+  },
+  
+  
+
 }
