--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -18,7 +18,9 @@
       "@/*": ["src/*"]
     },
     "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   
   
